--- a/src/templates/payment/payment_failure.html
+++ b/src/templates/payment/payment_failure.html
@@ -10,7 +10,7 @@
     <div class="container text-center my-5">
         <h2 class="text-danger">Payment Failed! ❌</h2>
         <p>Unfortunately, your payment could not be processed.</p>
-        <a href="{% url 'payment' %}" class="btn btn-warning">Try Again</a>
+        <a href="{% url 'payment_view' %}" class="btn btn-warning">Try Again</a>
     </div>
 </body>
 </html>
