--- a/src/templates/payment/payment_success.html
+++ b/src/templates/payment/payment_success.html
@@ -8,7 +8,7 @@
     <script>
         // Redirect after 5 seconds
         setTimeout(function () {
-            window.location.href = "./templates/index.html"; // Change to the desired URL
+            window.location.href = "{% url 'index' %}";
         }, 5000);
     </script>
 </head>
