--- a/src/templates/user_enrolled_detail.html
+++ b/src/templates/user_enrolled_detail.html
@@ -1,4 +1,7 @@
+{% extends 'header.html' %}
 {% load static %}
+
+{% block main_content %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 <style>
@@ -48,90 +51,6 @@
       background-color:#165d5d!important;
     }
 </style>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
-
-    <title>Gym Management System</title>
-
-    <!-- Additional CSS Files -->
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/bootstrap.min.css' %}">
-
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/font-awesome.css' %}">
-
-    <link rel="stylesheet" href="{% static 'assets/css/templatemo-training-studio.css' %}">
-
-</head>
-
-<!-- ***** Preloader Start ***** -->
-<div id="js-preloader" class="js-preloader">
-    <div class="preloader-inner">
-        <span class="dot"></span>
-        <div class="dots">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-    </div>
-</div>
-<!-- ***** Preloader End ***** -->
-
-
-<!-- Topbar Start -->
-<div class="container-fluid py-3 px-lg-5 d-none d-lg-block">
-    <div class="row">
-        {% if request.user.is_authenticated %}
-        <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
-            <div class="d-inline-flex align-items-center">
-                <a class="text-body pr-3" href="/user_profile/"><i style="color:red" class="fa fa-user mr-2"></i>My Profile</a>
-                <a class="text-body px-3" href="/user_change_password/"><i style="color:red" class="fa fa-unlock-alt mr-2"></i>Change Password</a>
-                <a class="text-body px-3" href="/user_logout/"><i style="color:red" class="fa fa-envelope mr-2"></i>Logout</a>
-            </div>
-        </div>
-        {% else %}
-        <div class="col-md-12 text-center text-lg-right">
-            <div class="d-inline-flex align-items-center">
-                <a class="text-body px-3"  href="/user_login/">
-                    <i style="color:red" class="fa fa-user mr-2"></i>User Login</a>
-            </div>
-        </div>
-        {% endif %}
-    </div>
-</div>
-<!-- Topbar End -->
-<!-- Navbar Start -->
-<div class="container-fluid position-relative nav-bar p-0">
-    <div class="position-relative px-lg-5" style="z-index: 9;">
-        <nav class="navbar navbar-expand-lg bg-secondary navbar-dark py-3 py-lg-3 pl-3 pl-lg-5">
-            <a href="" >
-                <h2 class="text-uppercase text-warning mb-1">Gym <span class="text-white">Management System</span>
-                </h2>
-            </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
-                <div class="navbar-nav ml-auto py-0">
-                    <a href="/" class="nav-item nav-link active">Home</a>
-                    <a href="#features" class="nav-item nav-link">About</a>
-                    <a href="#our-classes" class="nav-item nav-link">Classes</a>
-                    <a href="#schedule" class="nav-item nav-link ">Schedules</a>
-                    <a href="#contact-us" class="nav-item nav-link">Contact</a>
-                    {% if request.user.is_authenticated %}
-                    <a href="/enrolled_history/" class="nav-item nav-link">Enrolled History</a>
-                    {% else %}
-                    <a href="#admin"><button style="color:red" class="nav-item nav-link">Admin</button></a>
-                    {% endif %}
-                </div>
-            </div>
-        </nav>
-    </div>
-</div>
-<!-- Navbar End -->
 <body>
 <section class="section" id="schedule">
     <div class="container">
@@ -273,3 +192,4 @@
   </script>
 </body>
 </html>
+{% endblock %}
