--- a/src/templates/invoice.html
+++ b/src/templates/invoice.html
@@ -87,10 +87,10 @@
                             <h5 class="mb-0">Gym Information</h5>
                         </div>
                         <div class="card-body">
-                            <p><strong>Gym Name:</strong> Fitness Pro</p>
-                            <p><strong>Address:</strong> 123 Fitness St, Kathmandu</p>
+                            <p><strong>Gym Name:</strong> Gym Management System</p>
+                            <p><strong>Address:</strong> Budhanilkantha, Kathmandu</p>
                             <p><strong>Contact:</strong> 01-2345678</p>
-                            <p><strong>Email:</strong> info@fitnesspro.com</p>
+                            <p><strong>Email:</strong> gymmanagementsystem01@gmail.com</p>
                         </div>
                     </div>
                 </div>
