--- a/src/templates/user_enrolled_detail.html
+++ b/src/templates/user_enrolled_detail.html
@@ -101,35 +101,55 @@
                                 </tr>
                                 <tr>
                                     <th style="color:blue">Payment Type:</th>
-                                    <td colspan="10" style="color:purple">{{data.get_status_display}}</td>
+                                    <td colspan="10" style="color:purple">
+                                        {% if payment %}
+                                            {{ payment.0.payment_method }}
+                                        {% else %}
+                                            N/A
+                                        {% endif %}
+                                    </td>
                                 </tr>
                             </table>
                             <table id="example6" class="table table-bordered table-striped">
-                                        <div class="card-body">
-                                            <tr>
-                                                <center>
-                                                    <h4 style="color:blue">Payment History</h4>
-                                                </center>
-                                            </tr>
-
-                                            <table id="example5" class="table table-bordered table-striped">
-                                                <thead>
-                                                <tr>
-                                                    <th>Payment Type:</th>
-                                                    <th>Amount Paid:</th>
-                                                    <th>Payment Date:</th>
-                                                </tr>
-                                                </thead>
-                                                <tbody>
-                                                {% for i in payment %}
-                                                <tr>
-                                                    <td style="color:blue">{{i.get_status_display}}</td>
-                                                    <td style="color:blue">{{i.price}}</td>
-                                                    <td style="color:blue">{{i.creationdate}}</td>
-                                                </tr>
-                                                {% endfor %}
-                                                </tbody>
-                                            </table>
+                              <div class="card-body">
+                                  <tr>
+                                      <center>
+                                          <h4 style="color:blue">Payment History</h4>
+                                      </center>
+                                  </tr>
+                            <table id="example5" class="table table-bordered table-striped">
+                              <thead>
+                              <tr>
+                                  <th>Payment Type:</th>
+                                  <th>Status:</th>
+                                  <th>Amount Paid:</th>
+                                  <th>Payment Date:</th>
+                              </tr>
+                              </thead>
+                              <tbody>
+                              {% for i in payment %}
+                              <tr>
+                                  <td style="color:blue">{{ i.payment_method|default:"N/A" }}</td>
+                                  <td style="color:green">{{ i.get_status_display }}</td>
+                                  <td style="color:blue">
+                                      {% if i.amount %}
+                                          {{ i.amount }}
+                                      {% elif i.price %}
+                                          {{ i.price }}
+                                      {% else %}
+                                          0.00
+                                      {% endif %}
+                                  </td>
+                                  <td style="color:blue">{{ i.creationdate }}</td>
+                              </tr>
+                              {% empty %}
+                              <tr>
+                                  <td colspan="4" style="text-align:center; color:red">No payment history found</td>
+                              </tr>
+                              {% endfor %}
+                              </tbody>
+                          </table>
+                                          
                                         </div>
                             </table>
                         </div>
@@ -140,19 +160,6 @@
         </section>
     </div>
 </section>
-<!-- ***** Footer Start ***** -->
-<footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <p>Copyright &copy;
-                    <script>document.write(new Date().getFullYear());</script>
-                    Gym Management System
-                </p>
-            </div>
-        </div>
-    </div>
-</footer>
 
 <!-- jQuery -->
 <script src="{% static 'assets/js/jquery-2.1.0.min.js' %}"></script>
