--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -316,16 +316,18 @@
 </section>
 {% endif%}
 
+
 <!-- ***** Admin Area Ends ***** -->
 
 
 <!-- jQuery -->
 <script src="{% static 'assets/js/jquery-2.1.0.min.js' %}"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Bootstrap -->
 <script src="{% static 'assets/js/popper.js' %}"></script>
 <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
 <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
 <!-- Plugins -->
@@ -336,11 +338,6 @@
 <script src="{% static 'assets/js/mixitup.js' %}"></script>
 <script src="{% static 'assets/js/accordions.js' %}"></script>
 
-<!-- Global Init -->
-<script src="{% static 'assets/js/custom.js' %}"></script>
-{% for i in messages %}
-<script>
-alert('{{i}}');
-</script>
-{% endfor %}
+
+
 {% endblock %}
